tests/errors/invalid-float.ssv
val:float
3.14
not_a_float
